--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -1,7 +1,6 @@
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
@@ -14,12 +13,21 @@
   line-height: 24px;
   font-style: normal;
   font-weight: 500;
-  min-width: 180px;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  width: 180px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
+  border-radius: 10px;
+  background: #3f51b5 radial-gradient(circle at 50% 0, rgba(255,255,255,.65), rgba(255,255,255,.35));
+  box-shadow:
+  inset rgba(0,0,0,.6) 0 -3px 8px,
+  inset rgba(252,255,255,.7) 0 3px 8px,
+  rgba(0,0,0,.8) 0 3px 8px -3px;
 }
 
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
 }
+
+
