--- a/src/components/finder.module.css
+++ b/src/components/finder.module.css
@@ -1,4 +1,3 @@
-
 .App {
   display: grid;
   grid-template-columns: 1fr;
@@ -6,36 +5,11 @@
   padding-bottom: 24px;
 }
 
-/*
- * Стили компонента Searchbar
- */
-
-
-/*
- * Стили компонента SearchForm
- */
-
-
-/*
- * Стили компонента ImageGallery
- */
-
-
-/*
- * Стили компонента ImageGalleryItem
- */
-
-/*
- * Стили компонента Modal
- */
-
-
-
-/*
-* Стили компонента Buton (Load more)
-*/
-
-
-
-
-
+.Error {
+  display: block;
+  width: 400px;
+  font-size: 30px;
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+}
