--- a/src/components/finder.module.css
+++ b/src/components/finder.module.css
@@ -5,11 +5,7 @@
   padding-bottom: 24px;
 }
 
-.Error {
-  display: block;
-  width: 400px;
-  font-size: 30px;
-  font-weight: bold;
-  margin-left: auto;
-  margin-right: auto;
+.BallTriangle {
+  display: flex;
+  justify-content: center;
 }
